@@ -15,6 +15,7 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 @Service
@@ -57,425 +58,275 @@ public class DashboardStatsService {
     @Autowired
     private SecurityService securityService;
 
-    public DashboardSummaryDTO getUnifiedSummary(User requester, LocalDate from, LocalDate to, Long targetUserId, Long teamId, Long managerId) {
-        if (requester == null) return null;
-        
-        // Ensure we have a managed entity to avoid LazyInitializationException on detached objects
-        User user = userRepository.findById(requester.getId()).orElse(requester);
-        
-        String viewerRole = (user.getRole() != null) ? user.getRole().getName().toUpperCase() : "ASSOCIATE";
-        boolean viewerIsAdmin = viewerRole.contains("ADMIN");
-        boolean viewerIsManager = viewerRole.contains("MANAGER") || viewerRole.equals("MGR");
-        boolean viewerIsTL = viewerRole.contains("TEAM_LEAD") || viewerRole.equals("TL") || viewerRole.contains("TEAMLEAD");
+    private <T> CompletableFuture<T> safeAsync(Supplier<T> supplier, T fallback) {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                T result = supplier.get();
+                return result != null ? result : fallback;
+            } catch (Exception e) {
+                return fallback;
+            }
+        });
+    }
 
+    public DashboardSummaryDTO getUnifiedSummary(User requester, LocalDate from, LocalDate to, Long targetUserId,
+            Long teamId, Long managerId) {
+        if (requester == null)
+            return null;
+
+        User user = userRepository.findById(requester.getId()).orElse(requester);
         LocalDateTime start = (from != null ? from : LocalDate.now().minusDays(30)).atStartOfDay();
         LocalDateTime end = (to != null ? to : LocalDate.now()).atTime(LocalTime.MAX);
 
-        // Security / Scoping Logic - CENTRALIZED
-        java.util.Set<Long> allowedUserIds = securityService.getAllowedUserIds(user);
-        
-        if (targetUserId != null) {
+        Set<Long> userIds;
+        if (targetUserId != null && targetUserId > 0) {
             securityService.validateAccess(user, targetUserId);
-            allowedUserIds = java.util.Collections.singleton(targetUserId);
-        } else if (teamId != null) {
-            securityService.validateAccess(user, teamId);
-            allowedUserIds = new java.util.HashSet<>(userRepository.findSubordinateIds(teamId));
-            allowedUserIds.add(teamId);
-        } else if (managerId != null) {
-            securityService.validateAccess(user, managerId);
-            allowedUserIds = new java.util.HashSet<>(userRepository.findSubordinateIds(managerId));
-            allowedUserIds.add(managerId);
+            userIds = Set.of(targetUserId);
+        } else {
+            userIds = securityService.getScopedUserIds(user, teamId != null && teamId > 0 ? teamId : null);
         }
 
-        // Convert to User objects if needed for legacy methods, but preferred to use IDs
-        List<User> allowedUsers = userRepository.findAllById(allowedUserIds);
+        boolean isFiltered = targetUserId != null || teamId != null || managerId != null;
+        boolean isGlobalAdmin = securityService.isAdmin(user) && !isFiltered;
 
-        // Use consistent date defaults
-        LocalDate fromDate = (from != null) ? from : LocalDate.now().minusDays(30);
-        LocalDate toDate = (to != null) ? to : LocalDate.now();
+        DashboardStatsDTO stats = getStats(userIds, from != null ? from : LocalDate.now().minusDays(30),
+                to != null ? to : LocalDate.now(), isGlobalAdmin, user, targetUserId,
+                teamId != null ? teamId : managerId);
 
-        // 1. Basic Stats
-        boolean isGlobalAdmin = viewerIsAdmin && targetUserId == null && teamId == null && managerId == null;
-        DashboardStatsDTO stats = getStats(allowedUsers, fromDate, toDate, isGlobalAdmin, user, targetUserId, teamId != null ? teamId : managerId);
-        // 2. Trend Data (Revenue, Leads, Lost)
         ReportFilterDTO filter = ReportFilterDTO.builder()
-                .fromDate(fromDate)
-                .toDate(toDate)
+                .fromDate(from != null ? from : LocalDate.now().minusDays(30))
+                .toDate(to != null ? to : LocalDate.now())
                 .build();
-        if (targetUserId != null) filter.setUserId(targetUserId);
-        else if (teamId != null) filter.setTeamLeaderId(teamId);
-        else if (managerId != null) filter.setManagerId(managerId);
-        
+        if (targetUserId != null)
+            filter.setUserId(targetUserId);
+        else if (teamId != null)
+            filter.setTeamLeaderId(teamId);
+        else if (managerId != null)
+            filter.setManagerId(managerId);
+
         List<TimeSeriesStatsDTO> trend = reportService.getFilteredTrend(filter);
 
-        // 3. Status Distribution (Pre-aggregated)
-        List<Long> userIds = allowedUsers.stream().map(User::getId).collect(Collectors.toList());
-        
-        // 3. Status Distribution (Pre-aggregated & Dynamic)
-        List<DashboardProjection> distributionList;
-        if (isGlobalAdmin) {
-            distributionList = leadRepository.countByStatusGlobal(start, end);
-        } else {
-            distributionList = leadRepository.countByStatusForUsers(userIds, start, end);
-        }
+        List<DashboardProjection> distributionList = isGlobalAdmin ? leadRepository.countByStatusGlobal(start, end)
+                : leadRepository.countByStatusForUsers(userIds, start, end);
 
         Map<String, Long> mappedDistribution = new HashMap<>();
         for (DashboardProjection p : distributionList) {
-            if (p.getStatus() != null) {
+            if (p.getStatus() != null)
                 mappedDistribution.put(p.getStatus().toUpperCase(), p.getCount());
-            }
         }
 
-        // Add legacy keys for frontend compatibility if missing
         mappedDistribution.putIfAbsent("NEW", 0L);
         mappedDistribution.putIfAbsent("CONTACTED", 0L);
         mappedDistribution.putIfAbsent("FOLLOW_UP", mappedDistribution.getOrDefault("FOLLOWUP", 0L));
-        mappedDistribution.putIfAbsent("CONVERTED", mappedDistribution.getOrDefault("PAID", 0L) + mappedDistribution.getOrDefault("SUCCESS", 0L));
+        mappedDistribution.putIfAbsent("CONVERTED",
+                mappedDistribution.getOrDefault("PAID", 0L) + mappedDistribution.getOrDefault("SUCCESS", 0L));
 
-        return DashboardSummaryDTO.builder()
-                .stats(stats)
-                .trend(trend)
-                .statusDistribution(mappedDistribution)
-                .performance(stats.getPerformance())
-                .build();
+        return DashboardSummaryDTO.builder().stats(stats).trend(trend).statusDistribution(mappedDistribution)
+                .performance(stats.getPerformance()).build();
     }
 
-    public Map<String, Long> getGlobalStats() {
-        LocalDateTime start = LocalDate.now().minusDays(30).atStartOfDay();
-        LocalDateTime end = LocalDateTime.now();
-        Map<String, Long> stats = leadRepository.getGlobalSummaryStats(start, end);
-        Map<String, Long> result = new HashMap<>();
-        if (stats != null) {
-            result.put("NEW", asLong(stats.get("newCount")));
-            result.put("CONTACTED", asLong(stats.get("contactedCount")));
-            result.put("INTERESTED", asLong(stats.get("interestedCount")));
-            result.put("FOLLOW_UP", asLong(stats.get("followUpCount")));
-            result.put("CONVERTED", asLong(stats.get("convertedCount")));
-            result.put("LOST", asLong(stats.get("lostCount")));
-        }
-        return result;
-    }
-
-    public Map<String, Object> getStats(LocalDateTime start, LocalDateTime end, User requester, Long userId, Long teamId, Long managerId) {
-        LocalDate from = start != null ? start.toLocalDate() : LocalDate.now().minusDays(30);
-        LocalDate to = end != null ? end.toLocalDate() : LocalDate.now();
-        DashboardSummaryDTO summary = getUnifiedSummary(requester, from, to, userId, teamId, managerId);
-        
-        Map<String, Object> result = new HashMap<>();
-        if (summary != null) {
-            result.put("stats", summary.getStats());
-            result.put("statusDistribution", summary.getStatusDistribution());
-            result.put("performance", summary.getPerformance());
-            result.put("trend", summary.getTrend());
-        }
-        return result;
-    }
-
-    public List<Map<String, Object>> getMemberPerformanceFiltered(LocalDateTime start, LocalDateTime end, User requester, Long userId, Long tlId, Long managerId) {
-        LocalDate from = start != null ? start.toLocalDate() : LocalDate.now().minusDays(30);
-        LocalDate to = end != null ? end.toLocalDate() : LocalDate.now();
-        DashboardSummaryDTO summary = getUnifiedSummary(requester, from, to, userId, tlId, managerId);
-        
-        List<Map<String, Object>> result = new ArrayList<>();
-        if (summary != null && summary.getPerformance() != null) {
-            for (MemberPerformanceDTO perf : summary.getPerformance()) {
-                Map<String, Object> map = new HashMap<>();
-                map.put("userId", perf.getUserId());
-                map.put("username", perf.getUsername());
-                map.put("role", perf.getRole());
-                map.put("totalLeads", perf.getTotalLeads());
-                map.put("convertedCount", perf.getConvertedCount());
-                map.put("lostCount", perf.getLostCount());
-                result.add(map);
-            }
-        }
-        return result;
-    }
-
-    private long asLong(Object val) {
-        if (val instanceof Number) {
-            return ((Number) val).longValue();
-        }
-        return 0L;
-    }
-
-    // Removed determineAllowedUsers and collectSubordinates in favor of SecurityService
-
-    public DashboardStatsDTO getStats(Collection<User> allowedUsers, LocalDate from, LocalDate to, boolean isGlobalAdmin, User requester, Long targetUserId, Long teamId) {
+    public DashboardStatsDTO getStats(Collection<Long> userIds, LocalDate from, LocalDate to, boolean isGlobalAdmin,
+            User requester, Long targetUserId, Long teamId) {
         if (requester == null)
             return null;
 
         ZoneId zone = ZoneId.of("Asia/Kolkata");
         ZonedDateTime zdtNow = ZonedDateTime.now(zone);
         LocalDateTime now = zdtNow.toLocalDateTime();
-        
         LocalDateTime start = from.atStartOfDay();
         LocalDateTime end = to.atTime(LocalTime.MAX);
-        
-        // Define 'Today' range for the schedule card
         LocalDateTime dayStart = zdtNow.toLocalDate().atStartOfDay();
         LocalDateTime dayEnd = zdtNow.toLocalDate().atTime(LocalTime.MAX);
 
-        // 0. Base Filter Setup
-        Set<Long> finalUserIds = (allowedUsers != null && !allowedUsers.isEmpty())
-            ? allowedUsers.stream().map(User::getId).collect(Collectors.toSet())
-            : new HashSet<>();
-        
-        final List<Long> userIds = new ArrayList<>(finalUserIds);
-        boolean hasFilter = (targetUserId != null || teamId != null);
-        String currentViewerRole = (requester.getRole() != null) ? requester.getRole().getName() : "ASSOCIATE";
-        
-        // 1. Dynamic Status Intelligence
-        if (hasFilter && userIds.isEmpty()) {
+        List<User> activeScopeUsers = userRepository.findAllById(userIds).stream()
+                .filter(u -> u.getJoiningDate() == null || !u.getJoiningDate().isAfter(zdtNow.toLocalDate()))
+                .collect(Collectors.toList());
+
+        final List<Long> userIdList = activeScopeUsers.stream()
+                .map(User::getId)
+                .collect(Collectors.toList());
+
+        java.util.Map<String, Long> userBreakdown = activeScopeUsers.stream()
+                .collect(Collectors.groupingBy(
+                        u -> u.getRole() != null ? u.getRole().getName().replace("ROLE_", "") : "UNKNOWN",
+                        Collectors.counting()));
+
+        if ((targetUserId != null || teamId != null) && userIdList.isEmpty())
             return DashboardStatsDTO.builder().build();
+        if (!isGlobalAdmin && userIdList.isEmpty()) {
+            return DashboardStatsDTO.builder().dailyRevenue(BigDecimal.ZERO).monthlyRevenue(BigDecimal.ZERO)
+                    .expectedRevenue(BigDecimal.ZERO).monthlyTarget(BigDecimal.ZERO).targetAchievement(0.0).build();
         }
 
-        if (!isGlobalAdmin && userIds.isEmpty()) {
-            return DashboardStatsDTO.builder()
-                    .dailyRevenue(BigDecimal.ZERO).monthlyRevenue(BigDecimal.ZERO).expectedRevenue(BigDecimal.ZERO)
-                    .monthlyTarget(BigDecimal.ZERO).targetAchievement(0.0)
-                    .build();
-        }
+        List<LeadStatus> sS = pipelineStageRepository.findByAnalyticBucketIn(List.of("SUCCESS", "CONVERTED", "PAID"))
+                .stream().map(s -> LeadStatus.fromString(s.getStatusValue())).collect(Collectors.toList());
+        if (sS.isEmpty())
+            sS = List.of(LeadStatus.CONVERTED, LeadStatus.PAID, LeadStatus.SUCCESS);
+        final List<LeadStatus> successStatuses = Collections.unmodifiableList(sS);
 
-        final Long requesterId = requester.getId();
-        final int currentMonth = LocalDateTime.now(ZoneId.of("Asia/Kolkata")).getMonthValue();
-        final int currentYear = LocalDateTime.now(ZoneId.of("Asia/Kolkata")).getYear();
+        List<LeadStatus> lS = pipelineStageRepository
+                .findByAnalyticBucketIn(List.of("LOST", "NOT_INTERESTED", "REJECTED")).stream()
+                .map(s -> LeadStatus.fromString(s.getStatusValue())).collect(Collectors.toList());
+        if (lS.isEmpty())
+            lS = List.of(LeadStatus.LOST, LeadStatus.NOT_INTERESTED, LeadStatus.REJECTED);
+        final List<LeadStatus> lostStatuses = Collections.unmodifiableList(lS);
 
-        // 1. Dynamic Status Intelligence
-        List<String> rawSuccess = pipelineStageRepository.findByAnalyticBucketIn(List.of("SUCCESS", "CONVERTED", "PAID"))
-                .stream().map(s -> s.getStatusValue().toUpperCase()).collect(Collectors.toList());
-        final List<String> successStatuses = rawSuccess.isEmpty() 
-                ? List.of("CONVERTED", "PAID", "EMI", "SUCCESS", "CLOSED") 
-                : rawSuccess;
+        List<LeadStatus> iS = pipelineStageRepository
+                .findByAnalyticBucketIn(List.of("INTERESTED", "UNDER_REVIEW", "FOLLOWUP", "WORKING")).stream()
+                .map(s -> LeadStatus.fromString(s.getStatusValue())).collect(Collectors.toList());
+        if (iS.isEmpty())
+            iS = List.of(LeadStatus.INTERESTED, LeadStatus.UNDER_REVIEW, LeadStatus.FOLLOW_UP, LeadStatus.WORKING);
+        final List<LeadStatus> interestedStatuses = Collections.unmodifiableList(iS);
 
-        List<String> rawLost = pipelineStageRepository.findByAnalyticBucketIn(List.of("LOST", "NOT_INTERESTED", "REJECTED"))
-                .stream().map(s -> s.getStatusValue().toUpperCase()).collect(Collectors.toList());
-        final List<String> lostStatuses = new ArrayList<>(rawLost);
-        if (lostStatuses.isEmpty()) {
-            lostStatuses.addAll(List.of("LOST", "NOT_INTERESTED", "REJECTED"));
-        }
+        List<String> dbS = pipelineStageRepository.findByActiveTrueOrderByOrderIndexAsc().stream()
+                .map(PipelineStage::getStatusValue).collect(Collectors.toList());
+        final List<LeadStatus> activeStatuses = dbS.isEmpty()
+                ? List.of(LeadStatus.NEW, LeadStatus.CONTACTED, LeadStatus.FOLLOW_UP)
+                : dbS.stream().map(LeadStatus::fromString).collect(Collectors.toList());
 
-        List<String> rawInterested = pipelineStageRepository.findByAnalyticBucketIn(List.of("INTERESTED", "UNDER_REVIEW", "FOLLOWUP", "WORKING"))
-                .stream().map(s -> s.getStatusValue().toUpperCase()).collect(Collectors.toList());
-        final List<String> interestedStatuses = rawInterested.isEmpty()
-                ? List.of("INTERESTED", "UNDER_REVIEW", "FOLLOWUP", "WORKING")
-                : rawInterested;
+        CompletableFuture<Long> activeLoadFuture = safeAsync(
+                () -> isGlobalAdmin ? leadRepository.countByCreatedAtBetween(start, end)
+                        : leadRepository.countByAssignedToIdInAndStatusInAndCreatedAtBetween(userIdList, activeStatuses,
+                                start.minusMonths(12), end),
+                0L);
 
-        List<String> rawClosed = pipelineStageRepository.findByAnalyticBucketIn(List.of("CLOSED", "COMPLETED", "TERMINATED"))
-                .stream().map(s -> s.getStatusValue().toUpperCase()).collect(Collectors.toList());
-        final List<String> closedStatuses = rawClosed;
-        
-        final List<String> terminalStatuses = new ArrayList<>();
-        terminalStatuses.addAll(lostStatuses);
-        terminalStatuses.add("PAID");
-        terminalStatuses.add("CONVERTED");
-        terminalStatuses.add("CLOSED");
-        
-        // excludeStatuses for general pipeline tasks (Follow-ups for non-converted leads)
-        final List<String> excludeStatuses = new ArrayList<>(terminalStatuses);
-        if (!excludeStatuses.contains("EMI")) excludeStatuses.add("EMI"); // Don't show standard follow-ups for EMI leads
+        CompletableFuture<long[]> attendanceStatsFuture = safeAsync(() -> {
+            long present = (isGlobalAdmin && targetUserId == null && teamId == null)
+                    ? attendanceRepository.countPresentUsers(dayStart, dayEnd)
+                    : attendanceRepository.countPresentUsersIn(userIdList, dayStart, dayEnd);
+            long late = (isGlobalAdmin && targetUserId == null && teamId == null)
+                    ? attendanceRepository.countLateUsers(dayStart, dayEnd)
+                    : attendanceRepository.countLateUsersIn(userIdList, dayStart, dayEnd);
+            long totalScopeUsers = (isGlobalAdmin && targetUserId == null && teamId == null)
+                    ? userRepository.countActiveUsersByDate(dayStart.toLocalDate())
+                    : userIdList.size();
+            return new long[] { present, late, Math.max(0, totalScopeUsers - present) };
+        }, new long[] { 0, 0, 0 });
 
-        final List<String> dbStatuses = pipelineStageRepository.findByActiveTrueOrderByOrderIndexAsc()
-                .stream().map(PipelineStage::getStatusValue).collect(Collectors.toList());
-        final List<String> activeStatuses = dbStatuses.isEmpty() ? List.of("NEW", "CONTACTED", "FOLLOW_UP") : dbStatuses;
+        CompletableFuture<BigDecimal> dailyRevenueFuture = safeAsync(
+                () -> isGlobalAdmin ? paymentRepository.getGlobalTotalRevenue(start, end)
+                        : paymentRepository.getTotalRevenueIn(userIdList, start, end),
+                BigDecimal.ZERO);
+        CompletableFuture<BigDecimal> monthlyRevenueFuture = safeAsync(
+                () -> isGlobalAdmin ? paymentRepository.getGlobalTotalRevenue(start.withDayOfMonth(1), end)
+                        : paymentRepository.getTotalRevenueIn(userIdList, start.withDayOfMonth(1), end),
+                BigDecimal.ZERO);
+        CompletableFuture<BigDecimal> pendingRevenueFuture = safeAsync(
+                () -> isGlobalAdmin ? paymentRepository.getGlobalTotalPendingRevenue()
+                        : paymentRepository.getTotalPendingRevenueByUserIds(userIdList),
+                BigDecimal.ZERO);
+        CompletableFuture<BigDecimal> forecastRevenueFuture = safeAsync(
+                () -> (isGlobalAdmin || userIdList.isEmpty()) ? BigDecimal.ZERO
+                        : paymentRepository.getForecastRevenue(userIdList, end, end.plusDays(30)),
+                BigDecimal.ZERO);
 
-        CompletableFuture<Long> activeLoadFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? leadRepository.countByCreatedAtBetween(start, end) 
-                         : leadRepository.countByAssignedToIdInAndStatusInAndCreatedAtBetween(userIds, activeStatuses, start.minusMonths(12), end));
+        CompletableFuture<Long> pendingPaymentsCountFuture = safeAsync(
+                () -> isGlobalAdmin ? taskRepository.countGlobalPendingTasksByType("EMI_COLLECTION", now)
+                        : taskRepository.countPendingTasksByType(userIdList, "EMI_COLLECTION", now),
+                0L);
+        CompletableFuture<Long> pendingLeadsCountFuture = safeAsync(
+                () -> isGlobalAdmin ? taskRepository.countGlobalPendingTasksByType("FOLLOW_UP", now)
+                        : taskRepository.countPendingTasksByType(userIdList, "FOLLOW_UP", now),
+                0L);
+        CompletableFuture<Long> overduePaymentsCountFuture = safeAsync(
+                () -> isGlobalAdmin ? paymentRepository.countGlobalPendingPayments(now)
+                        : paymentRepository.countPendingPayments(userIdList, now),
+                0L);
+        CompletableFuture<Long> todayPaymentsCountFuture = safeAsync(
+                () -> isGlobalAdmin ? taskRepository.countGlobalFollowupsByType("EMI_COLLECTION", dayStart, dayEnd)
+                        : taskRepository.countFollowupsByType(userIdList, "EMI_COLLECTION", dayStart, dayEnd),
+                0L);
+        CompletableFuture<Long> todayFollowupsFuture = safeAsync(
+                () -> isGlobalAdmin ? taskRepository.countGlobalFollowups(dayStart, dayEnd)
+                        : taskRepository.countFollowups(userIdList, dayStart, dayEnd),
+                0L);
+        CompletableFuture<Long> pendingTasksFuture = safeAsync(
+                () -> isGlobalAdmin ? taskRepository.countGlobalPendingTasks(now)
+                        : taskRepository.countPendingTasks(userIdList, now),
+                0L);
+        CompletableFuture<Long> highPriorityFollowupsFuture = safeAsync(
+                () -> isGlobalAdmin ? leadRepository.countGlobalHighPriorityLeads(now)
+                        : leadRepository.countHighPriorityLeads(userIdList, now),
+                0L);
+        CompletableFuture<Long> completedTodayFuture = safeAsync(
+                () -> isGlobalAdmin ? taskRepository.countGlobalCompletedToday(dayStart, dayEnd)
+                        : taskRepository.countCompletedToday(userIdList, dayStart, dayEnd),
+                0L);
 
-        CompletableFuture<long[]> attendanceStatsFuture = CompletableFuture.supplyAsync(() -> {
-            long present = 0, late = 0, absent = 0;
-            
-            if (isGlobalAdmin && !hasFilter) {
-                present = attendanceRepository.countPresentUsers(dayStart, dayEnd);
-                late = attendanceRepository.countLateUsers(dayStart, dayEnd);
-            } else {
-                present = attendanceRepository.countPresentUsersIn(userIds, dayStart, dayEnd);
-                late = attendanceRepository.countLateUsersIn(userIds, dayStart, dayEnd);
-            }
-            
-            // Total active users in this scope
-            long totalScopeUsers = ((isGlobalAdmin && !hasFilter) 
-                ? userRepository.countActiveUsersByDate(dayStart.toLocalDate()) 
-                : userIds.size());
-            absent = Math.max(0, totalScopeUsers - present);
-            
-            return new long[]{present, late, absent};
-        });
+        CompletableFuture<Long> activeTicketsFuture = safeAsync(() -> isGlobalAdmin
+                ? ticketRepository.countByStatusIn(List.of(TicketStatus.OPEN, TicketStatus.IN_PROGRESS))
+                : ticketRepository.countByUserIdInAndStatusIn(userIdList,
+                        List.of(TicketStatus.OPEN, TicketStatus.IN_PROGRESS)),
+                0L);
+        CompletableFuture<Long> pendingTicketsFuture = safeAsync(
+                () -> isGlobalAdmin ? ticketRepository.countByStatusIn(List.of(TicketStatus.OPEN))
+                        : ticketRepository.countByUserIdInAndStatusIn(userIdList, List.of(TicketStatus.OPEN)),
+                0L);
+        CompletableFuture<Long> resolvedTicketsFuture = safeAsync(
+                () -> isGlobalAdmin ? ticketRepository.countByStatusIn(List.of(TicketStatus.RESOLVED))
+                        : ticketRepository.countByUserIdInAndStatusIn(userIdList, List.of(TicketStatus.RESOLVED)),
+                0L);
+        CompletableFuture<Long> closedTicketsFuture = safeAsync(
+                () -> isGlobalAdmin ? ticketRepository.countByStatusIn(List.of(TicketStatus.CLOSED))
+                        : ticketRepository.countByUserIdInAndStatusIn(userIdList, List.of(TicketStatus.CLOSED)),
+                0L);
 
-        // 2. Revenue Block
-        CompletableFuture<BigDecimal> dailyRevenueFuture = CompletableFuture.supplyAsync(() -> {
-            if (isGlobalAdmin && !hasFilter) return paymentRepository.getGlobalTotalRevenue(start, end);
-            if (userIds.isEmpty()) return BigDecimal.ZERO;
-            return paymentRepository.getTotalRevenueIn(userIds, start, end);
-        });
+        final List<Long> finalQueryUserIds = (targetUserId != null) ? List.of(targetUserId) : userIdList;
+        CompletableFuture<Long> interestedCountFuture = safeAsync(
+                () -> (isGlobalAdmin && targetUserId == null && teamId == null)
+                        ? leadRepository.countByCreatedAtBetweenAndStatusIn(start, end, interestedStatuses)
+                        : leadRepository.countSquadLeadsByStatus(finalQueryUserIds, interestedStatuses, start, end),
+                0L);
+        CompletableFuture<Long> totalLostCountFuture = safeAsync(
+                () -> (isGlobalAdmin && targetUserId == null && teamId == null)
+                        ? leadRepository.countByCreatedAtBetweenAndStatusIn(start, end, lostStatuses)
+                        : leadRepository.countSquadLeadsByStatus(finalQueryUserIds, lostStatuses, start, end),
+                0L);
+        CompletableFuture<Long> totalLeadsCountFuture = safeAsync(
+                () -> (isGlobalAdmin && targetUserId == null && teamId == null) ? leadRepository.count()
+                        : leadRepository.countTotalRegistry(finalQueryUserIds),
+                0L);
+        CompletableFuture<Long> convertedCountFuture = safeAsync(
+                () -> (isGlobalAdmin && targetUserId == null && teamId == null)
+                        ? leadRepository.countByStatusIn(successStatuses)
+                        : leadRepository.countSquadConversionsInPeriod(finalQueryUserIds, successStatuses, start, end),
+                0L);
 
-        CompletableFuture<BigDecimal> monthlyRevenueFuture = CompletableFuture.supplyAsync(() -> {
-            if (isGlobalAdmin && !hasFilter) return paymentRepository.getGlobalTotalRevenue(start, end);
-            if (userIds.isEmpty()) return BigDecimal.ZERO;
-            return paymentRepository.getTotalRevenueIn(userIds, start, end);
-        });
+        CompletableFuture<List<Map<String, Object>>> leadTrendFuture = safeAsync(
+                () -> (isGlobalAdmin && targetUserId == null && teamId == null)
+                        ? leadRepository.getGlobalDailyLeadTrend(start, end)
+                        : leadRepository.getDailyLeadTrendByIds(finalQueryUserIds, start, end),
+                new ArrayList<>());
+        CompletableFuture<List<Map<String, Object>>> convertedTrendFuture = safeAsync(
+                () -> (isGlobalAdmin && targetUserId == null && teamId == null)
+                        ? leadRepository.getGlobalDailyConvertedTrend(successStatuses, start, end)
+                        : leadRepository.getDailyConvertedTrendByIds(finalQueryUserIds, successStatuses, start, end),
+                new ArrayList<>());
+        CompletableFuture<List<Map<String, Object>>> lostTrendFuture = safeAsync(
+                () -> (isGlobalAdmin && targetUserId == null && teamId == null)
+                        ? leadRepository.getGlobalDailyLostTrend(lostStatuses, start, end)
+                        : leadRepository.getDailyLostTrendByIds(finalQueryUserIds, lostStatuses, start, end),
+                new ArrayList<>());
+        CompletableFuture<List<Map<String, Object>>> revenueTrendFuture = safeAsync(
+                () -> (isGlobalAdmin && targetUserId == null && teamId == null)
+                        ? paymentRepository.getGlobalDailyRevenueTrend(start, end)
+                        : paymentRepository.getDailyRevenueTrendByIds(finalQueryUserIds, start, end),
+                new ArrayList<>());
 
-        CompletableFuture<BigDecimal> pendingRevenueFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? paymentRepository.getGlobalTotalPendingRevenue()
-                         : (userIds.isEmpty() ? BigDecimal.ZERO : paymentRepository.getTotalPendingRevenueByUserIds(userIds)));
-
-        CompletableFuture<BigDecimal> forecastRevenueFuture = CompletableFuture.supplyAsync(() -> 
-            (isGlobalAdmin || userIds.isEmpty()) ? BigDecimal.ZERO 
-                                                     : paymentRepository.getForecastRevenue(userIds, end, end.plusDays(30)));
-
-        CompletableFuture<Long> pendingPaymentsCountFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? taskRepository.countGlobalPendingTasksByType("EMI_COLLECTION", now)
-                         : (userIds.isEmpty() ? 0L : taskRepository.countPendingTasksByType(userIds, "EMI_COLLECTION", now)));
-                         
-        CompletableFuture<Long> pendingLeadsCountFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? taskRepository.countGlobalPendingTasksByType("FOLLOW_UP", now)
-                         : (userIds.isEmpty() ? 0L : taskRepository.countPendingTasksByType(userIds, "FOLLOW_UP", now)));
-                         
-        CompletableFuture<Long> overduePaymentsCountFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? paymentRepository.countGlobalPendingPayments(now)
-                         : (userIds.isEmpty() ? 0L : paymentRepository.countPendingPayments(userIds, now)));
-
-        CompletableFuture<Long> todayPaymentsCountFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? taskRepository.countGlobalFollowupsByType("EMI_COLLECTION", dayStart, dayEnd)
-                         : (userIds.isEmpty() ? 0L : taskRepository.countFollowupsByType(userIds, "EMI_COLLECTION", dayStart, dayEnd)));
-
-        CompletableFuture<Long> todayFollowupsFuture = CompletableFuture.supplyAsync(() -> {
-            long count = isGlobalAdmin ? taskRepository.countGlobalFollowups(dayStart, dayEnd)
-                         : (userIds.isEmpty() ? 0L : taskRepository.countFollowups(userIds, dayStart, dayEnd));
-            return count;
-        });
-
-        CompletableFuture<Long> pendingTasksFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? taskRepository.countGlobalPendingTasks(now)
-                                : (userIds.isEmpty() ? 0L : taskRepository.countPendingTasks(userIds, now)));
-
-        CompletableFuture<Long> highPriorityFollowupsFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? leadRepository.countGlobalHighPriorityLeads(now)
-                         : (userIds.isEmpty() ? 0L : leadRepository.countHighPriorityLeads(userIds, now)));
-
-        CompletableFuture<Long> completedTodayFuture = CompletableFuture.supplyAsync(() -> {
-            return isGlobalAdmin ? taskRepository.countGlobalCompletedToday(dayStart, dayEnd)
-                                : (userIds.isEmpty() ? 0L : taskRepository.countCompletedToday(userIds, dayStart, dayEnd));
-        });
-
-        // 4. Leads Block
-        CompletableFuture<Long> todayLeadsCountFuture = CompletableFuture.supplyAsync(() -> {
-            long count = isGlobalAdmin ? taskRepository.countGlobalFollowupsByType("FOLLOW_UP", dayStart, dayEnd)
-                         : (userIds.isEmpty() ? 0L : taskRepository.countFollowupsByType(userIds, "FOLLOW_UP", dayStart, dayEnd));
-            return count;
-        });
-
-        // 5. Tickets Block
-        CompletableFuture<Long> activeTicketsFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? ticketRepository.countByStatusIn(List.of(TicketStatus.OPEN, TicketStatus.IN_PROGRESS))
-                         : ticketRepository.countByUsersAndStatusIn(allowedUsers, List.of(TicketStatus.OPEN, TicketStatus.IN_PROGRESS)));
-
-        CompletableFuture<Long> pendingTicketsFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? ticketRepository.countByStatusIn(List.of(TicketStatus.OPEN))
-                         : ticketRepository.countByUsersAndStatusIn(allowedUsers, List.of(TicketStatus.OPEN)));
-
-        CompletableFuture<Long> resolvedTicketsFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? ticketRepository.countByStatusIn(List.of(TicketStatus.RESOLVED))
-                         : ticketRepository.countByUsersAndStatusIn(allowedUsers, List.of(TicketStatus.RESOLVED)));
-
-        CompletableFuture<Long> closedTicketsFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin ? ticketRepository.countByStatusIn(List.of(TicketStatus.CLOSED))
-                         : ticketRepository.countByUsersAndStatusIn(allowedUsers, List.of(TicketStatus.CLOSED)));
-
-        // 6. User Breakdown Block (Sequential as it's quick)
-        Map<String, Long> userBreakdown = new HashMap<>();
-        if (isGlobalAdmin) {
-            userBreakdown = userRepository.findAll().stream()
-                    .filter(u -> u.isActive() && u.getRole() != null)
-                    .collect(Collectors.groupingBy(u -> u.getRole().getName(), Collectors.counting()));
-        } else {
-            userBreakdown = allowedUsers.stream()
-                    .filter(u -> u.isActive() && u.getRole() != null)
-                    .collect(Collectors.groupingBy(u -> u.getRole().getName(), Collectors.counting()));
-        }
-
-        // 7. Ensure userIds is correctly filtered for the specific target context
-        final List<Long> finalQueryUserIds;
-        if (targetUserId != null) {
-            finalQueryUserIds = List.of(targetUserId);
-        } else {
-            finalQueryUserIds = userIds;
-        }
-
-        CompletableFuture<Long> interestedCountFuture = CompletableFuture.supplyAsync(() -> {
-            if (isGlobalAdmin && !hasFilter) return leadRepository.countByCreatedAtBetweenAndStatusIn(start, end, interestedStatuses);
-            if (finalQueryUserIds.isEmpty()) return 0L;
-            return leadRepository.countSquadLeadsByStatus(finalQueryUserIds, interestedStatuses, start, end);
-        });
-
-        CompletableFuture<Long> totalLostCountFuture = CompletableFuture.supplyAsync(() -> {
-            if (isGlobalAdmin && !hasFilter) return leadRepository.countByCreatedAtBetweenAndStatusIn(start, end, lostStatuses);
-            if (finalQueryUserIds.isEmpty()) return 0L;
-            return leadRepository.countSquadLeadsByStatus(finalQueryUserIds, lostStatuses, start, end);
-        });
-
-        CompletableFuture<Long> totalLeadsCountFuture = CompletableFuture.supplyAsync(() -> {
-            if (isGlobalAdmin && !hasFilter) return leadRepository.count();
-            if (finalQueryUserIds.isEmpty()) return 0L;
-            return leadRepository.countTotalRegistry(finalQueryUserIds);
-        });
-
-        CompletableFuture<Long> convertedCountFuture = CompletableFuture.supplyAsync(() -> {
-            if (isGlobalAdmin && !hasFilter) return leadRepository.countByStatusIn(successStatuses);
-            if (finalQueryUserIds.isEmpty()) return 0L;
-            return leadRepository.countSquadConversionsInPeriod(finalQueryUserIds, successStatuses, start, end);
-        });
-
-        // 5. Trends Block (New)
-        CompletableFuture<List<Map<String, Object>>> leadTrendFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin && !hasFilter ? leadRepository.getGlobalDailyLeadTrend(start, end)
-                         : (finalQueryUserIds.isEmpty() ? new ArrayList<>() : leadRepository.getDailyLeadTrendByIds(finalQueryUserIds, start, end)));
-
-        CompletableFuture<List<Map<String, Object>>> convertedTrendFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin && !hasFilter ? leadRepository.getGlobalDailyConvertedTrend(successStatuses, start, end)
-                         : (finalQueryUserIds.isEmpty() ? new ArrayList<>() : leadRepository.getDailyConvertedTrendByIds(finalQueryUserIds, successStatuses, start, end)));
-
-        CompletableFuture<List<Map<String, Object>>> lostTrendFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin && !hasFilter ? leadRepository.getGlobalDailyLostTrend(lostStatuses, start, end)
-                         : (finalQueryUserIds.isEmpty() ? new ArrayList<>() : leadRepository.getDailyLostTrendByIds(finalQueryUserIds, lostStatuses, start, end)));
-
-        CompletableFuture<List<Map<String, Object>>> revenueTrendFuture = CompletableFuture.supplyAsync(() -> 
-            isGlobalAdmin && !hasFilter ? paymentRepository.getGlobalDailyRevenueTrend(start, end)
-                         : (finalQueryUserIds.isEmpty() ? new ArrayList<>() : paymentRepository.getDailyRevenueTrendByIds(finalQueryUserIds, start, end)));
-
-        // Wait for all to complete with safety
         try {
-            CompletableFuture.allOf(
-                activeLoadFuture, attendanceStatsFuture,
-                monthlyRevenueFuture, dailyRevenueFuture, pendingRevenueFuture,
-                forecastRevenueFuture, pendingPaymentsCountFuture, todayFollowupsFuture,
-                pendingTasksFuture, interestedCountFuture, totalLostCountFuture,
-                totalLeadsCountFuture, convertedCountFuture, todayLeadsCountFuture,
-                activeTicketsFuture, pendingTicketsFuture, resolvedTicketsFuture,
-                closedTicketsFuture, todayPaymentsCountFuture, overduePaymentsCountFuture,
-                pendingLeadsCountFuture,
-                leadTrendFuture, convertedTrendFuture, lostTrendFuture, revenueTrendFuture,
-                completedTodayFuture
-            ).get(10, java.util.concurrent.TimeUnit.SECONDS);
-
-            List<Map<String, Object>> leadsT = safeGetFromFuture(leadTrendFuture, new ArrayList<>());
-            List<Map<String, Object>> convT = safeGetFromFuture(convertedTrendFuture, new ArrayList<>());
-            List<Map<String, Object>> lostT = safeGetFromFuture(lostTrendFuture, new ArrayList<>());
-            List<Map<String, Object>> revT = safeGetFromFuture(revenueTrendFuture, new ArrayList<>());
-
+            CompletableFuture.allOf(activeLoadFuture, attendanceStatsFuture, monthlyRevenueFuture, dailyRevenueFuture,
+                    pendingRevenueFuture, forecastRevenueFuture, pendingPaymentsCountFuture, todayFollowupsFuture,
+                    pendingTasksFuture, interestedCountFuture, totalLostCountFuture, totalLeadsCountFuture,
+                    convertedCountFuture, activeTicketsFuture, pendingTicketsFuture, resolvedTicketsFuture,
+                    closedTicketsFuture, todayPaymentsCountFuture, overduePaymentsCountFuture, pendingLeadsCountFuture,
+                    leadTrendFuture, convertedTrendFuture, lostTrendFuture, revenueTrendFuture, completedTodayFuture)
+                    .get(15, java.util.concurrent.TimeUnit.SECONDS);
         } catch (Exception e) {
-            // Quietly handle partial timeouts
         }
 
-        // Status Distribution (Pre-aggregated)
-        Map<String, Long> statusDistribution;
-        if (isGlobalAdmin && !hasFilter) {
-            statusDistribution = leadRepository.getGlobalSummaryStats(start, end);
-        } else {
-            statusDistribution = userIds.isEmpty() ? new HashMap<>() : leadRepository.getSummaryStats(userIds, start, end);
-        }
-
+        Map<String, Long> statusDistribution = (isGlobalAdmin && targetUserId == null && teamId == null)
+                ? leadRepository.getGlobalSummaryStats(start, end)
+                : leadRepository.getSummaryStats(userIdList, start, end);
         Map<String, Long> mappedDistribution = new HashMap<>();
         if (statusDistribution != null) {
             mappedDistribution.put("NEW", asLong(statusDistribution.get("newCount")));
@@ -487,162 +338,120 @@ public class DashboardStatsService {
             mappedDistribution.put("REJECTED", asLong(statusDistribution.get("rejectedCount")));
         }
 
-        // 8. Aggregate Trend Data
-        List<Map<String, Object>> leadsT = safeGetFromFuture(leadTrendFuture, new ArrayList<>());
-        List<Map<String, Object>> convT = safeGetFromFuture(convertedTrendFuture, new ArrayList<>());
-        List<Map<String, Object>> lostT = safeGetFromFuture(lostTrendFuture, new ArrayList<>());
-        List<Map<String, Object>> revT = safeGetFromFuture(revenueTrendFuture, new ArrayList<>());
-
-        Map<String, Map<String, Object>> trendMap = new TreeMap<>(); // Sorted by date
-        
-        // Helper to fill the map
+        Map<String, Map<String, Object>> trendMap = new TreeMap<>();
         java.util.function.BiConsumer<List<Map<String, Object>>, String> filler = (list, key) -> {
             for (Map<String, Object> item : list) {
-                if (item.get("date") == null && item.get("DATE") == null) continue;
                 Object dateObj = item.get("date") != null ? item.get("date") : item.get("DATE");
+                if (dateObj == null)
+                    continue;
                 String date = dateObj.toString();
-                
                 trendMap.putIfAbsent(date, new HashMap<>());
                 trendMap.get(date).put("date", date);
-                
                 Object val = item.get("count");
-                if (val == null) val = item.get("COUNT");
-                if (val == null) val = item.get("amount");
-                if (val == null) val = item.get("AMOUNT");
-                
+                if (val == null)
+                    val = item.get("COUNT");
+                if (val == null)
+                    val = item.get("amount");
+                if (val == null)
+                    val = item.get("AMOUNT");
                 trendMap.get(date).put(key, val != null ? val : 0);
             }
         };
+        filler.accept(leadTrendFuture.join(), "leads");
+        filler.accept(convertedTrendFuture.join(), "converted");
+        filler.accept(lostTrendFuture.join(), "lost");
+        filler.accept(revenueTrendFuture.join(), "revenue");
 
-        filler.accept(leadsT, "leads");
-        filler.accept(convT, "converted");
-        filler.accept(lostT, "lost");
-        filler.accept(revT, "revenue");
-
-        List<Map<String, Object>> finalTrend = new ArrayList<>(trendMap.values());
-
-        // Collect Results safely
-        long[] attStats = safeGetFromFuture(attendanceStatsFuture, new long[]{0L, 0L, 0L});
-        long present = attStats[0];
-        long halfDay = attStats[1];
-        long absent = attStats[2];
-        BigDecimal monthly = safeGetFromFuture(monthlyRevenueFuture, BigDecimal.ZERO);
-        BigDecimal daily = safeGetFromFuture(dailyRevenueFuture, BigDecimal.ZERO);
-        BigDecimal pendingPaymentsAmount = safeGetFromFuture(pendingRevenueFuture, BigDecimal.ZERO);
-        BigDecimal forecastRevenue = safeGetFromFuture(forecastRevenueFuture, BigDecimal.ZERO);
-        long pendingPayments = safeGetFromFuture(pendingPaymentsCountFuture, 0L);
-        long todayFollowups = safeGetFromFuture(todayFollowupsFuture, 0L);
-        long pendingAppointments = safeGetFromFuture(pendingTasksFuture, 0L);
-        long interestedCount = safeGetFromFuture(interestedCountFuture, 0L);
-        long totalLostCount = safeGetFromFuture(totalLostCountFuture, 0L);
-        long totalLeadsCount = safeGetFromFuture(totalLeadsCountFuture, 0L);
-        long convertedCount = safeGetFromFuture(convertedCountFuture, 0L);
-        long todayLeads = safeGetFromFuture(todayLeadsCountFuture, 0L);
-        long activeTickets = safeGetFromFuture(activeTicketsFuture, 0L);
-        long pendingTickets = safeGetFromFuture(pendingTicketsFuture, 0L);
-        long resolvedTickets = safeGetFromFuture(resolvedTicketsFuture, 0L);
-        long closedTickets = safeGetFromFuture(closedTicketsFuture, 0L);
-        long todayPayments = safeGetFromFuture(todayPaymentsCountFuture, 0L);
-        long overduePayments = safeGetFromFuture(overduePaymentsCountFuture, 0L);
-        long pendingLeadsCount = safeGetFromFuture(pendingLeadsCountFuture, 0L);
-        long pendingPaymentsCount = safeGetFromFuture(pendingPaymentsCountFuture, 0L);
-        long highPriority = safeGetFromFuture(highPriorityFollowupsFuture, 0L);
-        long completedTodayCount = safeGetFromFuture(completedTodayFuture, 0L);
-
-        // Monthly Target Logic (Sequential as it's quick)
+        long[] attStats = attendanceStatsFuture.join();
+        BigDecimal monthly = monthlyRevenueFuture.join();
         BigDecimal monthlyTarget = targetRepository
-                .findByUserIdAndMonthAndYear(requesterId, currentMonth, currentYear)
-                .map(RevenueTarget::getTargetAmount)
-                .orElse(requester.getMonthlyTarget());
-
+                .findByUserIdAndMonthAndYear(requester.getId(), zdtNow.getMonthValue(), zdtNow.getYear())
+                .map(RevenueTarget::getTargetAmount).orElse(requester.getMonthlyTarget());
         if (monthlyTarget == null || monthlyTarget.compareTo(BigDecimal.ZERO) == 0) {
             try {
                 GlobalTarget gt = attendanceService.getGlobalTarget();
-                if (gt != null) monthlyTarget = gt.getMonthlyRevenueGoal();
-            } catch (Exception e) {}
+                if (gt != null)
+                    monthlyTarget = gt.getMonthlyRevenueGoal();
+            } catch (Exception e) {
+            }
         }
-        if (monthlyTarget == null) monthlyTarget = BigDecimal.ZERO;
+        if (monthlyTarget == null)
+            monthlyTarget = BigDecimal.ZERO;
 
-        BigDecimal expected = monthlyTarget.subtract(monthly).max(BigDecimal.ZERO);
-        Double achievement = (monthlyTarget.compareTo(BigDecimal.ZERO) > 0) 
-            ? monthly.divide(monthlyTarget, 4, java.math.RoundingMode.HALF_UP).multiply(new BigDecimal(100)).doubleValue()
-            : 0.0;
-
-        // Only count ACTIVE users for the dashboard summary
-        List<User> activeAllowedUsers = allowedUsers.stream()
-                .filter(User::isActive)
-                .collect(Collectors.toList());
-        
-        long totalActiveUsers = (long) activeAllowedUsers.size();
-
-        // 8. Member Performance (REMOVED)
-        List<MemberPerformanceDTO> perfStats = new java.util.ArrayList<>();
+        Double achievement = (monthlyTarget.compareTo(BigDecimal.ZERO) > 0) ? monthly
+                .divide(monthlyTarget, 4, java.math.RoundingMode.HALF_UP).multiply(new BigDecimal(100)).doubleValue()
+                : 0.0;
 
         return DashboardStatsDTO.builder()
-                .presentCount(present)
-                .absentCount(absent)
-                .halfDayCount(halfDay)
-                .dailyRevenue(daily)
-                .monthlyRevenue(monthly)
-                .expectedRevenue(expected)
-                .pendingPaymentsAmount(pendingPaymentsAmount)
-                .forecastRevenue(forecastRevenue)
-                .todayFollowups(todayFollowups)
-                .pendingFollowups(pendingAppointments) // Strictly Tasks for "Today's Schedule" alignment
-                .pendingAppointments(pendingAppointments)
-                .pendingPayments(pendingPayments)
-                .monthlyTarget(monthlyTarget)
+                .presentCount(attStats[0]).absentCount(attStats[2]).halfDayCount(attStats[1])
+                .dailyRevenue(dailyRevenueFuture.join()).monthlyRevenue(monthly)
+                .expectedRevenue(monthlyTarget.subtract(monthly).max(BigDecimal.ZERO))
+                .pendingPaymentsAmount(pendingRevenueFuture.join()).forecastRevenue(forecastRevenueFuture.join())
+                .todayFollowups(todayFollowupsFuture.join()).pendingFollowups(pendingTasksFuture.join())
+                .pendingAppointments(pendingTasksFuture.join())
+                .pendingPayments(pendingPaymentsCountFuture.join()).monthlyTarget(monthlyTarget)
                 .targetAchievement(achievement)
-                .totalLostCount(totalLostCount)
-                .interestedCount(interestedCount)
-                .interestedToday(0) 
-                .totalLeads(totalLeadsCount)
-                .convertedCount(convertedCount)
-                .totalUsers(totalActiveUsers)
-                .userBreakdown(userBreakdown)
-                .todayLeadsCount(todayLeads)
-                .todayPaymentsCount(todayPayments)
-                .completedToday(completedTodayCount)
-                .highPriorityFollowups(highPriority)
-                .activeSupportTickets(activeTickets)
-                .pendingSupportTickets(pendingTickets)
-                .resolvedSupportTickets(resolvedTickets)
-                .closedSupportTickets(closedTickets)
-                .totalPendingCount(pendingPaymentsCount)
-                .pendingLeadsCount(pendingLeadsCount) 
-                .overduePaymentsCount(overduePayments) 
-                .pendingRevenueAmount(pendingPaymentsAmount)
-                .statusDistribution(mappedDistribution)
-                .performance(perfStats)
-                .dailyTrend(finalTrend)
-                .build();
+                .totalLostCount(totalLostCountFuture.join()).interestedCount(interestedCountFuture.join())
+                .totalLeads(totalLeadsCountFuture.join()).convertedCount(convertedCountFuture.join())
+                .totalUsers((long) userIdList.size()).todayLeadsCount(todayFollowupsFuture.join())
+                .todayPaymentsCount(todayPaymentsCountFuture.join()).completedToday(completedTodayFuture.join())
+                .highPriorityFollowups(highPriorityFollowupsFuture.join())
+                .activeSupportTickets(activeTicketsFuture.join()).pendingSupportTickets(pendingTicketsFuture.join())
+                .resolvedSupportTickets(resolvedTicketsFuture.join()).closedSupportTickets(closedTicketsFuture.join())
+                .totalPendingCount(pendingPaymentsCountFuture.join()).pendingLeadsCount(pendingLeadsCountFuture.join())
+                .overduePaymentsCount(overduePaymentsCountFuture.join())
+                .pendingRevenueAmount(pendingRevenueFuture.join())
+                .statusDistribution(mappedDistribution).userBreakdown(userBreakdown)
+                .dailyTrend(new ArrayList<>(trendMap.values())).build();
     }
 
-    private List<User> getTargetUsers(User user) {
-        if (user.getRole() != null && user.getRole().getName().equals("ADMIN")) {
-            return userRepository.findAll();
+    public Collection<User> determineAllowedUsers(User requester, Long userId, Long teamId) {
+        Set<Long> ids = securityService.getScopedUserIds(requester, teamId);
+        if (userId != null) {
+            securityService.validateAccess(requester, userId);
+            ids = Set.of(userId);
+        }
+        return userRepository.findAllById(ids);
+    }
+
+    public List<Map<String, Object>> getMemberPerformanceFiltered(LocalDateTime start, LocalDateTime end,
+            User requester, Long userId, Long tlId, Long managerId) {
+        Set<Long> userIds = securityService.getScopedUserIds(requester, tlId != null ? tlId : managerId);
+        if (userId != null) {
+            securityService.validateAccess(requester, userId);
+            userIds = Set.of(userId);
         }
 
-        List<Long> ids = userRepository.findSubordinateIds(user.getId());
-        List<User> result = new java.util.ArrayList<>();
-        if (ids != null && !ids.isEmpty()) {
-            result.addAll(userRepository.findAllById(ids));
+        List<Map<String, Object>> revenueData = paymentRepository.getRevenuePerUser(userIds, start, end);
+        List<Map<String, Object>> result = new ArrayList<>();
+
+        for (Map<String, Object> data : revenueData) {
+            Long uid = (Long) data.get("userId");
+            userRepository.findById(uid).ifPresent(u -> {
+                Map<String, Object> row = new HashMap<>(data);
+                row.put("userName", u.getName());
+                row.put("userEmail", u.getEmail());
+                result.add(row);
+            });
         }
-        result.add(user);
         return result;
     }
 
-    private <T> T safeGetFromFuture(CompletableFuture<T> future, T defaultValue) {
-        try {
-            if (future == null) return defaultValue;
-            T result = future.getNow(defaultValue);
-            return result != null ? result : defaultValue;
-        } catch (Exception e) {
-            return defaultValue;
+    public Map<String, Long> getGlobalStats() {
+        LocalDateTime start = LocalDateTime.now().minusYears(1);
+        LocalDateTime end = LocalDateTime.now();
+        List<DashboardProjection> distributionList = leadRepository.countByStatusGlobal(start, end);
+        Map<String, Long> mappedDistribution = new HashMap<>();
+        for (DashboardProjection p : distributionList) {
+            if (p.getStatus() != null)
+                mappedDistribution.put(p.getStatus().toUpperCase(), p.getCount());
         }
+        return mappedDistribution;
     }
 
-    public List<User> determineAllowedUsers(User user, Long a, Long b) {
-        return new ArrayList<>();
+    private long asLong(Object val) {
+        if (val instanceof Number)
+            return ((Number) val).longValue();
+        return 0L;
     }
 }
